# ajax

./: Cargo.toml  README.md
ajax-contracts/src/: main.cairo
artifacts/: contract.json
contracts/: protostar.toml
contracts/src/: battle.cairo  battle_abi.json  battle_compiled.json  contract.cairo  contract_compiled.json  enemy.cairo  enemy_compiled.json  hero.cairo  hero_abi.json  hero_compiled.json  main.cairo  ownable.cairo  ownable_abi.json  ownable_compiled.json  proxy_contract.cairo  proxy_contract_compiled.json  test_compiled.json
contracts/tests/: test_main.cairo
src/: env.rs  main.rs  player.rs
